--- a/templates/sentiment.html
+++ b/templates/sentiment.html
@@ -6,18 +6,29 @@
   <title>Pro3 News</title>
 </head>
 <body class="hold-transition sidebar-mini">
+  <div>
+    {{ chart|safe }}
+  </div>
+
 
   <div>
     {% for data in sentiment %}
       <h3>{{data.newspaper}}</h3>
-      <h3>{{data.date}}</h3>
-      <h3>{{data.sentiment}}</h3>
-      <h3>{{data.title}}</h3>
+      <p>{{data.date}}</p>
+      <p>{{data.sentiment}}</p>
+      <p>{{data.title}}</p>
       
     {% endfor %}
     
+<!-- Scatter plot -->
+<!-- used this as reference: 
+    https://blog.sneawo.com/blog/2019/01/24/easy-charts-in-python-app-with-plotly/?fbclid=IwAR0gtvsLA45irMvGXzxes72-3K37aPj5LJfK_r452SAng0uQryXPN3JwFPc -->
+
   </div>
-  <script>var data = '{{sentiment}}'</script>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
+  <script>var data = '{{sentiment}}'
+  </script>
   <script src = 'static\js\sentiment.js'></script>
 </body>
 </html>
