--- a/templates/keywords.html
+++ b/templates/keywords.html
@@ -11,6 +11,11 @@
           integrity="sha384-LS4/wo5Z/8SLpOLHs0IbuPAGOWTx30XSoZJ8o7WKH0UJhRpjXXTpODOjfVnNjeHu"
           crossorigin="anonymous"
         />
+        <style> 
+          img { 
+            max-width: 50%;
+          } 
+        </style>
       </head>
 
       <body>
@@ -37,7 +42,7 @@
                     
                   <br><br>
                   
-                  <img id="imageToSwap" class="profile" src="http://cdns2.freepik.com/free-photo/facebook-logo_318-49940.jpg">
+                  <img id="imageToSwap" class="profile" src="https://res.cloudinary.com/dq49yzr5o/image/upload/v1587511486/Word%20Cloud/2BB_ywimvl.png">
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
