--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -60,6 +60,11 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+img {
+  max-width: 100% important!;
+  transform: scale(-2%);
+}
+
 article,
 aside,
 figcaption,
@@ -523,41 +528,30 @@ mark,
   content: "\2014\00A0";
 }
 
+img {
+  max-width: 100%;
+}
+
 .img-fluid {
   max-width: 100%;
   height: auto;
 }
 
-HTML SCSSResult
-EDIT ON
-// animation container
-.animation-title {
-  font-family: sans-serif;
-  text-align: center;
-}
-
-.eye-animation {
-  // place in the middle of the screen
-  margin: auto;
-
-  width: 300px;
-  height: 300px;
-
 .slideshow {
-    margin: 50px auto; 
-    position: relative; 
-    width: 240px; 
-    height: 240px; 
-    padding: 10px; 
-    box-shadow: 0 0 20px rgba(0,0,0,0.4); 
+  margin: 50px auto;
+  position: relative;
+  width: 240px;
+  height: 240px;
+  padding: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
 }
 
-.slideshow > div { 
-    position: absolute; 
-    top: 10px; 
-    left: 10px; 
-    right: 10px; 
-    bottom: 10px; 
+.slideshow > div {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  right: 10px;
+  bottom: 10px;
 }
 
 .img-thumbnail {
