--- a/Bubble Viz/index.css
+++ b/Bubble Viz/index.css
@@ -1,6 +1,10 @@
 #g-chart {
   overflow: hidden;
   position: relative;
+  /* აქედან */
+  width: max-content;
+  margin: auto;
+  /* აქობამდე */
 }
 
 #g-form {
@@ -18,7 +22,7 @@
 }
 
 #g-form button {
-  background: #27c25681;
+  background: #004276;
   border: none;
   border-radius: 0 3px 3px 0;
   color: #fff;
@@ -152,7 +156,7 @@
 }
 
 .g-node .g-left {
-  fill: #d3abee;
+  fill: #fcb193;
 }
 
 .g-node.g-hover .g-left {
@@ -161,7 +165,7 @@
 }
 
 .g-node.g-selected .g-left {
-  fill: #5552dd;
+  fill: #99c0e5;
   /* c *= 2, darker(.5) */
   stroke: #6081a3;
   /* c *= 2, darker(2) */
@@ -169,18 +173,18 @@
 }
 
 .g-node .g-right {
-  fill: #b8ebd1fa;
+  fill: #a3d8cf;
 }
 
 .g-node.g-hover .g-right {
-  fill: #580000;
+  fill: #dfb1b1;
   /* darker(.5) */
 }
 
 .g-node.g-selected .g-right {
-  fill: #c7e9be;
+  fill: #fda4a7;
   /* c *= 2, darker(.5) */
-  stroke: #abebb1;
+  stroke: #af5e61;
   /* c *= 2, darker(2) */
   stroke-width: 1.5px;
 }
@@ -299,13 +303,13 @@ a.g-label {
 }
 
 .g-left a {
-  background-color: #62a7f1;
+  background-color: #c5d7ea;
   color: #4a5783;
 }
 
 .g-right a {
-  background-color: #7e0206;
-  color: #fc0810;
+  background-color: #fbdedf;
+  color: #734143;
 }
 
 .g-mention p:before,
