style and navbar added to all pages

--- a/templates/home.html
+++ b/templates/home.html
@@ -26,39 +26,29 @@
       </head>
       
       <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary no-pad">
-          <a class="navbar-brand offset-1 alert-secondary bigger-block" href="index.html" ><h2>Latitude</h2></a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        
-          <div class="collapse navbar-collapse" id="navbarColor01">
-            <ul class="nav nav-pills offset-7">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="true">Plots</a>
-                    <div class="dropdown-menu">
-                    <a class="dropdown-item" href="max.html">vs. Max Temp</a>
-                    <a class="dropdown-item" href="humid.html">vs. Humidity</a>
-                    <a class="dropdown-item" href="cloud.html">vs. Cloudiness</a>
-                    <a class="dropdown-item" href="wind.html">vs. Wind Speed</a>
-                    </div>
-                </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="compare.html">Comparison <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="data.html">Data</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Explore</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-item nav-link" href="home.html">Home</a>
+                <a class="nav-item nav-link" href="stocks.html">The Weekly Story</a>
+                <a class="nav-item nav-link" href="sentiment2.html">The Weekly Mood</a>
+                <a class="nav-item nav-link" href="shares.html">Talk of the Week</a>
+                <a class="nav-item nav-link" href="index2.html">Who Said It?</a>
+              </div>
+            </div>
+          </nav>
+       
         <br>
         <br>
         <h5><b>Team members: </b>Jerome Pelham, Deirdre Clark, Sirajuddin Pirzada, Heather Saul</h5>
         <br>
         <h5><b>Acknowledgements: </b>Ryan Boris, Richa Prakash, Earnest Long Jr., Guga Gogia, Lasha Kalandadze</h5>
         <br>
-        <h5><b>Data Sources: </b><a href="eventregistry.org">EventRegistry (news),</a><a href="https://www.alphavantage.co">Alpha Vantage (stocks)</a></h5>
+        <h5><b>Data Sources: </b><a href="eventregistry.org">EventRegistry (news),</a><a href="https://www.alphavantage.co"> Alpha Vantage (stocks)</a></h5>
         <br>
         <h5><b>Data extraction, organization, and cleaning:</b> Python, Pandas, Newspaper, NLTK, WordCloud, TextBlob, Excel</h5>
         <br>
@@ -75,7 +65,7 @@
         <h5><b>Website: </b>The website allows users to interact with dashboard elements that presents stock market behavior juxtaposed with text analysis of news sources. The news media analysis paints a global picture for users who are interested in looking at possible associations between news coverage and stock market behavior.
         </h5>
         <br>
-        <h5><b>Github link: </b> https://github.com/deirdrebclark/pro3-News</h5>          
+        <h5><b>Github link: </b><a href="https://github.com/deirdrebclark/pro3-News"> Here </a></h5>          
       </body>
     </html>
 </html>
