--- a/templates/index.css
+++ b/templates/index.css
@@ -156,7 +156,7 @@
 }
 
 .g-node .g-left {
-  fill: #fcb193;
+  fill: #32966c;
 }
 
 .g-node.g-hover .g-left {
@@ -173,7 +173,7 @@
 }
 
 .g-node .g-right {
-  fill: #a3d8cf;
+  fill: #663c9e;
 }
 
 .g-node.g-hover .g-right {
