--- a/templates/stocks.html
+++ b/templates/stocks.html
@@ -1,15 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Stock Data</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-</head>
-
-<body>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Event Dashboard: Coronavirus</title>
+        <link
+          href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/superhero/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-LS4/wo5Z/8SLpOLHs0IbuPAGOWTx30XSoZJ8o7WKH0UJhRpjXXTpODOjfVnNjeHu"
+          crossorigin="anonymous"
+        />
+        <style> 
+          img { 
+            max-width: 50%;
+          } 
+        </style>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12 jumbotron text-center">
+              <h1>Event Dashboard: Coronavirus</h1>
+              <p>An NLP exploration of Coronavirus news data and stock market behavior</p>
+            </div>
+          </div>
+      </head>
+      
+      <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Explore</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-item nav-link" href="home.html">Home</a>
+                <a class="nav-item nav-link" href="stocks.html">The Weekly Story</a>
+                <a class="nav-item nav-link" href="sentiment2.html">The Weekly Mood</a>
+                <a class="nav-item nav-link" href="shares.html">Talk of the Week</a>
+                <a class="nav-item nav-link" href="index2.html">Who Said It?</a>
+              </div>
+            </div>
+          </nav>
   <div class="container">
 
     {% for date in IDC %}
