--- a/templates/stocks2.html
+++ b/templates/stocks2.html
@@ -33,47 +33,33 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-item nav-link" href="home.html">Home</a>
+                <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="stocks.html">The Weekly Story</a>
                 <a class="nav-item nav-link" href="sentiment2.html">The Weekly Mood</a>
                 <a class="nav-item nav-link" href="shares.html">Talk of the Week</a>
-                <a class="nav-item nav-link" href="index2.html">Who Said It?</a>
+                <a class="nav-item nav-link" href="index.html">Who Said It?</a>
               </div>
             </div>
           </nav>
+  <div class="container">
 
-  <h1>Select a Date</h1>
-  <form action="/action_page.php">
-    <label for="weekday">Date:</label>
-    <input type="date" id="weekday" name="weekday">
-    <input type="submit" value='{{request.form.weekday}}'>
-  </form>
-  
-  <div class='container' style='width: 90%;'>
-    <canvas id="newsChart" width="400" height="275"></canvas>
+    {% for date in IDC %}
+
+    <div>
+        
+          <h3>{{date.open}}</h3>
+          <h3>{{date.high}}</h3>
+          <h3>{{IDC.low}}</h3>
+          <h3>{{IDC.close}}</h3>
+          <h3>{{IDC.volume}}</h3>
+        
+          {% endfor %}
+      
+      <script>var data = '{{shares}}'</script>
+      <script src = 'static\js\stocks.js'></script>
+    </div>
+    
   </div>
-  <div class = 'container'>
-
-  <div class='container'>
-      {% for data in popNews %}
-        {{data.newspaper}}
-        {{data.date}}
-        {{data.url}}
-        {{data.title}}
-        {{data.shares}}
-      {% endfor %}
-  </div>  
- 
-</div>  
-  <!--<script var data = '{{popNews}}'></script>-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-
-  <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
-  <script script type="text/javascript" src = "../static/js/shares.js" charset="utf-8"></script>
 </body>
+
 </html>
