--- a/templates/sentiment2.html
+++ b/templates/sentiment2.html
@@ -34,7 +34,7 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-item nav-link" href="home.html">Home</a>
-              <a class="nav-item nav-link" href="stocks.html">The Weekly Story</a>
+              <a class="nav-item nav-link" href="stocks2.html">The Weekly Story</a>
               <a class="nav-item nav-link" href="sentiment2.html">The Weekly Mood</a>
               <a class="nav-item nav-link" href="shares.html">Talk of the Week</a>
               <a class="nav-item nav-link" href="index2.html">Who Said It?</a>
