--- a/templates/sentiment.html
+++ b/templates/sentiment.html
@@ -62,7 +62,7 @@
         var realData = '{{ sentiment | tojson | safe}}'
     </script>
     
-    <script src='static\js\sentiment.js'></script>
+    <script src='static/js/sentiment.js'></script>
 </body>
 
 </html>
