--- a/templates/stocks2.html
+++ b/templates/stocks2.html
@@ -16,6 +16,9 @@
         display: flex;
         flex-flow: column nowrap;
       }
+      img {
+        max-width: 50%;
+      }
     </style>
   </head>
   <body>
@@ -45,18 +48,20 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="stocks.html">The Weekly Story</a>
+            <a class="nav-item nav-link" href="home.html">Home</a>
+            <a class="nav-item nav-link" href="stocks2.html"
+              >The Weekly Story</a
+            >
             <a class="nav-item nav-link" href="sentiment2.html"
               >The Weekly Mood</a
             >
             <a class="nav-item nav-link" href="shares.html">Talk of the Week</a>
-            <a class="nav-item nav-link" href="index.html">Who Said It?</a>
+            <a class="nav-item nav-link" href="index2.html">Who Said It?</a>
           </div>
         </div>
       </nav>
 
       <div class="row">
-        <div class="col-md-12 jumbotron text-center">
           <div id="wordcloud"></div>
         </div>
       </div>
