--- a/templates/Index2.html
+++ b/templates/Index2.html
@@ -41,7 +41,7 @@
               </div>
             </div>
           </nav><head>
-    <link rel="stylesheet" href="index.css"></link>
+    <link rel="stylesheet" href="/static/css/index.css"></link>
 </head>
 
 <body>
@@ -53,9 +53,9 @@
 
     <div id="g-chart">
     </div>
-    <script src="d3.v2.min.js"></script>
-    <script src="data.js"></script>
-    <script src="index.js"></script>
+    <script src="/static/js/d3.v2.min.js"></script>
+    <script src="/static/js/data.js"></script>
+    <script src="/static/js/index.js"></script>
     <div> Credit: <a href="https://archive.nytimes.com/www.nytimes.com/interactive/2012/09/06/us/politics/convention-word-counts.html#bailout">The New York Times</a>
     </div>
 </body>
