--- a/templates/home.html
+++ b/templates/home.html
@@ -38,7 +38,7 @@
               <div class="navbar-nav">
                 <a class="nav-item nav-link" href="home.html">Home</a>
                 <a class="nav-item nav-link" href="stocks2.html">The Weekly Story</a>
-                <a class="nav-item nav-link" href="sentiment2.html">The Weekly Mood</a>
+                <a class="nav-item nav-link" href="sentiment.html">The Weekly Mood</a>
                 <a class="nav-item nav-link" href="shares.html">Talk of the Week</a>
                 <a class="nav-item nav-link" href="index2.html">Who Said It?</a>
               </div>
