--- a/templates/sentiment.html
+++ b/templates/sentiment.html
@@ -1,7 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Event Dashboard: Coronavirus</title>
+        <script
+        src="https://code.jquery.com/jquery-3.5.0.min.js"
+        integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
+        crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+        <link
+          href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/superhero/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-LS4/wo5Z/8SLpOLHs0IbuPAGOWTx30XSoZJ8o7WKH0UJhRpjXXTpODOjfVnNjeHu"
+          crossorigin="anonymous"
+        />
+        <style> 
+          img { 
+            max-width: 50%;
+          } 
+        </style>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12 jumbotron text-center">
+              <h1>Event Dashboard: Coronavirus</h1>
+              <p>An NLP exploration of Coronavirus news data and stock market behavior</p>
+            </div>
+          </div>
+      </head>
+      
+      <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Explore</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-item nav-link" href="home.html">Home</a>
+                <a class="nav-item nav-link" href="stocks2.html">The Weekly Story</a>
+                <a class="nav-item nav-link" href="sentiment.html">The Weekly Mood</a>
+                <a class="nav-item nav-link" href="shares.html">Talk of the Week</a>
+                <a class="nav-item nav-link" href="index2.html">Who Said It?</a>
+              </div>
+            </div>
+          </nav>
 
-<head>
+<!-- <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
@@ -13,7 +59,7 @@
     <title>Pro3 News</title>
 </head>
 
-<body class="hold-transition sidebar-mini">
+<body class="hold-transition sidebar-mini"> -->
     <!-- <div id="">
         {% for data in sentiment %}
         {{data}}
