--- a/templates/stocks2.html
+++ b/templates/stocks2.html
@@ -52,7 +52,7 @@
             <a class="nav-item nav-link" href="stocks2.html"
               >The Weekly Story</a
             >
-            <a class="nav-item nav-link" href="sentiment2.html"
+            <a class="nav-item nav-link" href="sentiment.html"
               >The Weekly Mood</a
             >
             <a class="nav-item nav-link" href="shares.html">Talk of the Week</a>
