--- a/templates/sentiment.html
+++ b/templates/sentiment.html
@@ -76,7 +76,7 @@
             </div>
             <div class="card-body">
               <blockquote class="blockquote mb-0">
-                  <p> This scatter plot shows the sentiment in various newspapers biweekly starting from January 2020 </p>
+                  <p> This scatter plot shows the average weekly sentiment of the articles in the dataset starting from January 2020 </p>
                 <div id="senti"></div>
                 <footer class="blockquote-footer"></footer>
               </blockquote>
@@ -90,7 +90,7 @@
         </div>
         <div class="card-body">
           <blockquote class="blockquote mb-0">
-              <p> This scatter plot represents the sentiment in various newspapers starting from January 2020 </p>
+              <p> This scatter plot shows the sentiment values for all articles in our dataset starting from January 2020 </p>
             <div id="myDiv"></div>
             <footer class="blockquote-footer"></footer>
           </blockquote>
