--- a/templates/stocks2.html
+++ b/templates/stocks2.html
@@ -14,10 +14,13 @@
     <style>
       .App {
         display: flex;
-        flex-flow: column nowrap;
+        flex-flow: row wrap;
+        align-items: left;
+        margin-top: 20px;
+        margin-left: 80px;
       }
       img {
-        max-width: 50%;
+        max-width: 90%;
       }
     </style>
   </head>
