--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -275,7 +275,8 @@ button,
 select,
 optgroup,
 textarea {
-  margin: 0;
+  margin-top: 20px;
+  margin: 10px;
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
