--- a/templates/Index2.html
+++ b/templates/Index2.html
@@ -44,6 +44,19 @@
     <link rel="stylesheet" href="/static/css/index.css"></link>
 </head>
 
+<style>
+  .App {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: left;
+    margin-top: 20px;
+    margin-left: 80px;
+  }
+  img {
+    max-width: 90%;
+  }
+</style>
+
 <body>
     <select id="left">
         </select>
