--- a/templates/shares.html
+++ b/templates/shares.html
@@ -46,14 +46,14 @@
   <form action="/action_page.php">
     <label for="weekday">Date:</label>
     <input type="date" id="weekday" name="weekday">
-    <input type="submit" value='{{request.form.weekday}}'>
+    <input type="submit">
   </form>
   
-  <div class='container' style='width: 90%;'>
-    <canvas id="newsChart" width="400" height="275"></canvas>
+  <div class='container' style='width: 90%; background-color:beige'>
+    <canvas id="newsChart" width="400" height="275" style="background-color:beige"></canvas>
   </div>
-  <div class = 'container'>
-
+  <div class = 'container' >
+  <!--
   <div class='container'>
       {% for data in popNews %}
         {{data.newspaper}}
@@ -63,7 +63,7 @@
         {{data.shares}}
       {% endfor %}
   </div>  
- 
+-->
 </div>  
   <!--<script var data = '{{popNews}}'></script>-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.min.js"></script>
