removed unused files

--- a/templates/stocks2.html
+++ b/templates/stocks2.html
@@ -30,8 +30,7 @@
         <div class="col-md-12 jumbotron text-center">
           <h1>Event Dashboard: Coronavirus</h1>
           <p>
-            An NLP exploration of Coronavirus news data and stock market
-            behavior
+            An NLP exploration of Coronavirus news data 1/6/2020-4/12/2020
           </p>
         </div>
       </div>
