--- a/templates/shares.html
+++ b/templates/shares.html
@@ -20,7 +20,7 @@
           <div class="row">
             <div class="col-md-12 jumbotron text-center">
               <h1>Event Dashboard: Coronavirus</h1>
-              <p>An NLP exploration of Coronavirus news data and stock market behavior</p>
+              <p>An NLP exploration of Coronavirus news data 1/6/2020-4/12/2020</p>
             </div>
           </div>
       </head>
