--- a/templates/home.html
+++ b/templates/home.html
@@ -37,10 +37,10 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
                 <a class="nav-item nav-link" href="home.html">Home</a>
-                <a class="nav-item nav-link" href="stocks2.html">The Weekly Story</a>
+                <a class="nav-item nav-link" href="clouds.html">The Weekly Story</a>
                 <a class="nav-item nav-link" href="sentiment.html">The Weekly Mood</a>
                 <a class="nav-item nav-link" href="shares.html">Talk of the Week</a>
-                <a class="nav-item nav-link" href="index2.html">Who Said It?</a>
+                <a class="nav-item nav-link" href="bubbles.html">Who Said It?</a>
               </div>
             </div>
           </nav>
